--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=StageDIP
 spring.datasource.url=jdbc:mysql://localhost:3306/gestion_fournisseurs_db
 spring.datasource.username=root
+spring.profiles.active=dev
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
