--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,13 @@ spring.profiles.active=dev
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+logging.level.org.springframework.security=DEBUG
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
 
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+management.endpoints.web.base-path=/actuator
+
+jwt.secret=K2n47fJd8mLzS9Aq...YourRandomSecretHere...
+jwt.expirationMs=86400000 
